--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -116,9 +116,83 @@
         cursor: pointer;
     }
 
-    @media (max-width:600px) {
+    .left {
+        background-image: url(/assets/images/1.webp);
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        text-align: center;
+        padding: 1rem;
+        box-sizing: border-box;
+    }
+    .left h2 {
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.25rem;
+        font-weight: 300;
+        line-height: 1.56rem;
+        margin-bottom: 1rem;
+    }
+    .left .button {
+        margin: 0.80rem 0 1.1rem 0;
+        font-family: 'Dosis', sans-serif;
+        font-size: 1rem;
+        font-weight: 500;
+        line-height: 2.06rem;
+        border: none;
+        background: none;
+        text-decoration: underline;
+        cursor: pointer;
+    }
+    /* .break::before {
+        content: "\a";
+        white-space: pre;
+    } */
+
+
+    .right {
+        background-image: url(/assets/images/2\ \(2\).webp);
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        text-align: center;
+        padding: 1rem;
+        box-sizing: border-box;
+    }
+
+    .right h2 {
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.25rem;
+        font-weight: 300;
+        line-height: 1.56rem;
+        margin-bottom: 1rem;
+    }
+    .right .button {
+        margin: 0.80rem 0 1.1rem 0;
+        font-family: 'Dosis', sans-serif;
+        font-size: 1rem;
+        font-weight: 500;
+        line-height: 2.06rem;
+        border: none;
+        background: none;
+        text-decoration: underline;
+        cursor: pointer;
+    }
+
+    .line {
+        display: block;
+        float: right;
+        padding-top: 1rem;
+    }
+
+    /* mobile specific */
+    @media (max-width:743px) {
         .message {
-            border: 1px solid red;
             margin: 3rem auto;
             width: 92%;
             height: 18.69rem;
@@ -128,14 +202,17 @@
             gap: 1em;
         }
         .msg {
-            border: 1px solid green;
             width: 100%;
             height: 100%;
+        }
+        .break::before {
+            content: "\a";
+            white-space: pre;
         }
     }
 
     /* settings for tablets */
-    @media (min-width:601px) {
+    /* @media (max-width:899px) {
         .hero-content {
             width: 63.1%;
             height: 12.75rem;
@@ -165,7 +242,6 @@
         }
 
         .message {
-            border: 1px solid red;
             margin: 3rem auto;
             width: 92%;
             height: 18.69rem;
@@ -174,17 +250,19 @@
             justify-content: space-between;
         }
         .msg {
-            border: 1px solid green;
             width: 49%;
             height: 100%;
-        }
+        } 
 
-        
-    }
+        .break::before {
+            content: "\a";
+            white-space: pre;
+        }
+    }*/
 
 
     /* desktop styling */
-    @media (min-width:900px) {
+    @media (min-width:744px) {
         .nav-menu {
             width: auto;
             height: 1.69rem;
@@ -241,7 +319,7 @@
         }
 
         .message {
-            border: 1px solid red;
+            /* border: 1px solid red; */
             margin: 3rem auto;
             width: 92%;
             height: 18.69rem;
@@ -251,7 +329,7 @@
         }
 
         .msg {
-            border: 1px solid green;
+            /* border: 1px solid green; */
             width: 49%;
             height: 100%;
         }
