--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,5 @@
     /* Universal settings */
-    body {
+    * {
         padding: 0;
         margin: 0;
         scroll-behavior: smooth;
@@ -19,7 +19,7 @@
         height: 100vh;
         background-color: rgba(0, 0, 0, 0.60);
     }
-    /* container to hold all hero items */
+    /* container to hold all hero items on top of overlay */
     .hero-container {
         width: 92%;
         height: 100vh;
@@ -33,13 +33,13 @@
     .header {
         width: 100%;
         height: 1.75rem;
-        /*border: 1px solid red; (used to set header in place)*/
+        /*border: 1px solid red; (used to help set header in place)*/
         position: relative;
         top: 2.13rem;
         display: flex;
         justify-content: space-between;
     }
-    /* used to set the header items in place */
+    /* used to help set the header items in place */
     /*.h-child {
         border: 1px solid yellow;
     }*/
@@ -52,6 +52,11 @@
     .header-icons {
         width: 6.31rem;
         height: 1.69rem;
+    }
+
+    .header-icons a {
+        text-decoration: none;
+        color: #fff;
     }
     
     .header-icons a:not(:last-child) {
@@ -191,7 +196,7 @@
     }
 
     /* mobile specific */
-    @media (max-width:743px) {
+    @media (max-width:600px) {
         .message {
             margin: 3rem auto;
             width: 92%;
@@ -212,9 +217,10 @@
     }
 
     /* settings for tablets */
-    /* @media (max-width:899px) {
+    @media (min-width:601px) and (max-width:899px) {
         .hero-content {
             width: 63.1%;
+            max-width: 32.56rem;
             height: 12.75rem;
             margin: auto;
             display: flex;
@@ -239,6 +245,7 @@
             background: none;
             text-decoration: underline;
             cursor: pointer;
+            text-transform: uppercase;
         }
 
         .message {
@@ -258,7 +265,7 @@
             content: "\a";
             white-space: pre;
         }
-    }*/
+    }
 
 
     /* desktop styling */
