--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,6 +5,7 @@
         scroll-behavior: smooth;
         box-sizing: border-box;
     }
+
     /* mobile styling */
     .hero {  
         width: 100%;
@@ -13,12 +14,14 @@
         background-size: cover;
         background-position: center;
     }
+
     /* dark overlay on background image */
     .overlay {
         width: 100%;
         height: 100vh;
         background-color: rgba(0, 0, 0, 0.60);
     }
+
     /* container to hold all hero items on top of overlay */
     .hero-container {
         width: 92%;
@@ -33,16 +36,11 @@
     .header {
         width: 100%;
         height: 1.75rem;
-        /*border: 1px solid red; (used to help set header in place)*/
         position: relative;
         top: 2.13rem;
         display: flex;
         justify-content: space-between;
     }
-    /* used to help set the header items in place */
-    /*.h-child {
-        border: 1px solid yellow;
-    }*/
     
     .logo {
         width: 7.06rem;
@@ -63,7 +61,7 @@
         margin-right: 0.3rem;
     }
     
-    /* nav to appear on desktop/laptop but not visible on mobile */
+    /* navigation menu to appear on desktop/laptop but not visible on mobile */
     .nav-menu {
         width: auto;
         height: 1.69rem;
@@ -90,6 +88,7 @@
         text-decoration: none;
         color: #fff;
     }
+
     /* hero message and call to action */
     .hero-content {
         width: 95%;
@@ -102,6 +101,7 @@
         text-align: center;
         background-color: rgba(255, 255, 255, 0.80);
     }
+
     .hero-content h2 {
         font-family: 'Poppins', sans-serif;
         font-size: 1.88rem;
@@ -109,6 +109,7 @@
         line-height: 2.06rem;
         margin-bottom: 0;
     }
+
     .hero-content .button {
         margin: 0.80rem 0 1.1rem 0;
         font-family: 'Dosis', sans-serif;
@@ -133,14 +134,14 @@
         padding: 1rem;
         box-sizing: border-box;
     }
-    .left h2 {
+    .left h2, .right h2 {
         font-family: 'Poppins', sans-serif;
         font-size: 1.25rem;
         font-weight: 300;
         line-height: 1.56rem;
         margin-bottom: 1rem;
     }
-    .left .button {
+    .left .button, .right .button {
         margin: 0.80rem 0 1.1rem 0;
         font-family: 'Dosis', sans-serif;
         font-size: 1rem;
@@ -151,10 +152,6 @@
         text-decoration: underline;
         cursor: pointer;
     }
-    /* .break::before {
-        content: "\a";
-        white-space: pre;
-    } */
 
 
     .right {
@@ -168,25 +165,6 @@
         text-align: center;
         padding: 1rem;
         box-sizing: border-box;
-    }
-
-    .right h2 {
-        font-family: 'Poppins', sans-serif;
-        font-size: 1.25rem;
-        font-weight: 300;
-        line-height: 1.56rem;
-        margin-bottom: 1rem;
-    }
-    .right .button {
-        margin: 0.80rem 0 1.1rem 0;
-        font-family: 'Dosis', sans-serif;
-        font-size: 1rem;
-        font-weight: 500;
-        line-height: 2.06rem;
-        border: none;
-        background: none;
-        text-decoration: underline;
-        cursor: pointer;
     }
 
     .line {
