--- a/assets/styles/msg-products.css
+++ b/assets/styles/msg-products.css
@@ -1,4 +1,4 @@
-
+/* left and right containers for message area */
 .left {
     background-image: url(/assets/images/1.webp);
     background-size: cover;
@@ -44,13 +44,14 @@
     box-sizing: border-box;
 }
 
+/* line after the "shop now" button */
 .line {
     display: block;
     float: right;
     padding-top: 1rem;
 }
 
-/* mobile specific */
+/* mobile specific settings */
 @media (max-width:600px) {
     .message {
         margin: 3rem auto;
@@ -61,10 +62,12 @@
         flex-wrap: wrap;
         gap: 1em;
     }
+
     .msg {
         width: 100%;
         height: 100%;
     }
+    /* word wrap to move "collections" to new line */
     .break::before {
         content: "\a";
         white-space: pre;
@@ -86,6 +89,7 @@
         height: 100%;
     } 
 
+    /* word wrap to move "collections" to new line */
     .break::before {
         content: "\a";
         white-space: pre;
