--- a/assets/styles/msg-products.css
+++ b/assets/styles/msg-products.css
@@ -115,3 +115,32 @@
         height: 100%;
     }
 }
+
+/* products section styling */
+.products {
+    width: 92%;
+    margin: 2rem auto;
+    padding-top: 18.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.pro-container {
+    padding-top: 2.5rem;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    /* border: 1px solid greenyellow; */
+}
+
+.product {
+    width: 100%;
+    height: 21.88rem;
+    border: 1px solid red;
+}
