--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -2,16 +2,9 @@
  .hero {  
     width: 100%;
     height: 100vh;
-    background-image: url(/assets/images/2.webp);
+    background: linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)), url(/assets/images/2.webp);
     background-size: cover;
-    background-position: center;
-}
-
-/* dark overlay on background image */
-.overlay {
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.60);
+    background-position: center center;
 }
 
 /* container to hold all hero items on top of overlay */
