nav menu update

--- a/assets/styles/msg-products.css
+++ b/assets/styles/msg-products.css
@@ -51,7 +51,7 @@
     padding-top: 1rem;
 }
 
-/* mobile specific settings */
+/* message section mobile specific settings */
 @media (max-width:600px) {
     .message {
         margin: 3rem auto;
@@ -74,7 +74,7 @@
     }
 }
 
- /* settings for tablets */
+ /* message section settings for tablets */
  @media (min-width:601px) and (max-width:899px) {
     .message {
         margin: 3rem auto;
@@ -120,7 +120,7 @@
 .products {
     width: 92%;
     margin: 2rem auto;
-    padding-top: 18.5rem;
+    padding-top: 18.9rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -136,7 +136,6 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    /* border: 1px solid greenyellow; */
 }
 
 .product {
@@ -155,7 +154,7 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     font-size: 1.88rem;
-    /* line-height: 1.56rem; */
+    line-height: 1.56rem;
 }
 
 .product h2 p {
@@ -211,4 +210,41 @@
     background: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.40)), url(/assets/images/8.webp);
     background-position: center;
     background-size: cover;
+}
+
+@media (min-width:601px) and (max-width:899px) {
+    .products {
+        width: 92%;
+        margin: 2rem auto;
+        padding-top: 0.2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .pro-container {
+        padding-top: 2.9rem;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex: 1 1 0;
+        flex-direction: row;
+        flex-wrap: wrap;
+        /* justify-content: center; */
+        /* align-items: center; */
+        gap: 1rem;
+    }
+    
+    .product {
+        width: 30%;
+        height: 13.75rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1.5rem;
+        /* text-align: center; */
+        color: #FFFFFF;
+    }
 }
