--- a/assets/styles/msg-products.css
+++ b/assets/styles/msg-products.css
@@ -51,6 +51,7 @@
     padding-top: 1rem;
 }
 
+
 /* message section mobile specific settings */
 @media (max-width:600px) {
     .message {
@@ -67,12 +68,14 @@
         width: 100%;
         height: 100%;
     }
+
     /* word wrap to move "collections" to new line */
-    .break::before {
-        content: "\a";
-        white-space: pre;
-    }
+.break::before {
+    content: "\a";
+    white-space: pre;
 }
+}
+
 
  /* message section settings for tablets */
  @media (min-width:601px) and (max-width:899px) {
@@ -90,15 +93,15 @@
     } 
 
     /* word wrap to move "collections" to new line */
-    .break::before {
-        content: "\a";
-        white-space: pre;
-    }
+.break::before {
+    content: "\a";
+    white-space: pre;
+}
 }
 
 
 /* desktop styling */
-@media (min-width:744px) {
+@media (min-width:900px) {
     .message {
         /* border: 1px solid red; */
         margin: 3rem auto;
@@ -246,5 +249,68 @@
         gap: 1.5rem;
         /* text-align: center; */
         color: #FFFFFF;
+    }
+
+    .product h2 p {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 500;
+        font-size: 0.8rem;
+        line-height: 1.25rem;
+    }
+
+    /* word wrap to move "collections" to new line */
+    .break::before {
+        content: "\a";
+        white-space: pre;
+    }
+}
+
+/* desktop styling */
+@media (min-width:900px) {
+    .products {
+        width: 93%;
+        margin: 2rem auto;
+        padding-top: 0.2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .pro-container {
+        padding-top: 2.9rem;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex: 1 1 0;
+        flex-direction: row;
+        flex-wrap: wrap;
+        /* justify-content: center; */
+        /* align-items: center; */
+        gap: 1rem;
+    }
+    
+    .product {
+        width: 23.5%;
+        height: 17.50rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1.5rem;
+        color: #FFFFFF;
+    }
+
+    .product h2 p {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 500;
+        font-size: 0.2rem;
+        line-height: 1.25rem;
+    }
+
+    /* word wrap to move "collections" to new line */
+    .break1::before {
+        content: "\a";
+        white-space: pre;
     }
 }
