--- a/assets/styles/blog-footer.css
+++ b/assets/styles/blog-footer.css
@@ -1,3 +1,6 @@
+/* blog section style and setting */
+
+/* define size of the section and center */
 .blog-section {
     width: 92%;
     margin: 2rem auto;
@@ -8,6 +11,7 @@
     align-items: center;
 }
 
+/* define size of container for the blog and position of it's content */
 .blog-container {
     padding-top: 2rem;
     width: 100%;
@@ -17,6 +21,8 @@
     gap: 1.2rem;
 }
 
+
+/* size and settings for each blog card and position of it's content */
 .blog {
     width: 100%;
     height: 21.88rem;
@@ -112,6 +118,7 @@
     justify-content: flex-end;
 }
 
+/* set background image, position and size for each article */
 .article1 {
     background-image: url(/assets/images/1\ \(2\).jpg);
     background-position: center;
@@ -147,8 +154,6 @@
         height: 20.63rem;
         display: flex;
         flex-direction: column;
-        /* justify-content: flex-end;
-        align-items: flex-start; */
         gap: 1.5rem;
         color: #000;
         position: relative;
@@ -163,7 +168,6 @@
         height: auto;
         display: flex;
         flex-direction: row;
-        /* flex-wrap: wrap; */
         gap: 1.2rem;
     }
 
@@ -176,4 +180,17 @@
         color: #000;
         position: relative;
     }
+}
+
+/* footer section */
+
+.footer {
+    width: 100%;
+    height: 18.25rem;
+    margin: 0 auto;
+    background-color: #efefef;
+}
+
+hr {
+    background: #0000005C;
 }
