--- a/assets/styles/msg-products.css
+++ b/assets/styles/msg-products.css
@@ -119,8 +119,9 @@
         height: 100%;
     }
 }
+/* end of message section */
 
-/* products section styling */
+/*start of products section styling */
 .products {
     width: 92%;
     margin: 2rem auto;
