--- a/assets/styles/blog-footer.css
+++ b/assets/styles/blog-footer.css
@@ -126,13 +126,13 @@
 } 
 
 .article2 {
-    background-image: url(./assets/images/2\ \(4\).jpg);
+    background-image: url(../images/2\ \(4\).jpg);
     background-position: center;
     background-size: cover;
 } 
 
 .article3 {
-    background-image: url(./assets/images/3\ \(1\).jpg);
+    background-image: url(../images/3\ \(1\).jpg);
     background-position: center;
     background-size: cover;
 } 
