--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -2,7 +2,7 @@
  .hero {  
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.70)), url(../assets/images/2.webp);
+    background: linear-gradient(rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.70)), url(../images/2.webp);
     background-size: cover;
     background-position: center center;
 }
