--- a/assets/styles/msg-products.css
+++ b/assets/styles/msg-products.css
@@ -136,7 +136,7 @@
 .pro-container {
     padding-top: 2.5rem;
     width: 100%;
-    height: auto;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
@@ -144,14 +144,11 @@
 
 .product {
     width: 100%;
-    height: 25.88rem;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     gap: 1.5rem;
-    /* text-align: center;
-    color: #FFFFFF; */
 }
 
 .products h1 {
@@ -178,7 +175,7 @@
 
 .pro-img {
     width: 100%;
-    height: 19.88rem;
+    height: fit-content;
 }
 
 .pro-img img{
@@ -187,11 +184,29 @@
 }
 
 .pro-desc {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: fit-content;
     text-align: center;
+    line-height: 0.5rem;
     color: #000;
+    gap: 0.5rem;
 }
+
+.pro-container .button {
+    /* margin: 0.80rem 0 1.1rem 0; */
+    font-family: 'Dosis', sans-serif;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 2.06rem;
+    border: none;
+    background: none;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+
 
 
 @media (min-width:601px) and (max-width:899px) {
@@ -208,7 +223,7 @@
     .pro-container {
         padding-top: 2.9rem;
         width: 100%;
-        height: auto;
+        height: fit-content;
         display: flex;
         flex: 1 0 auto;
         flex-direction: row;
@@ -218,18 +233,17 @@
     
     .product {
         width: 30%;
-        height: 13.75rem;
+        height: fit-content;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 1.5rem;
-        /* color: #FFFFFF; */
     }
 
     .pro-img {
         width: 100%;
-        height: 11.75rem;
+        height: fit-content;
     }
     
     .pro-img img{
@@ -238,17 +252,16 @@
     }
 
     .pro-desc {
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        width: 90%;
         height: fit-content;
         text-align: center;
+        line-height: 0.5rem;
         color: #000;
+        gap: 0.5rem;
     }
 
-    /* word wrap to move "collections" to new line */
-    /* .break::before {
-        content: "\a";
-        white-space: pre;
-    } */
 }
 
 /* desktop styling */
@@ -266,28 +279,29 @@
     .pro-container {
         padding-top: 2.9rem;
         width: 100%;
-        height: auto;
+        height: fit-content;
         display: flex;
         flex: 1 0 auto;
         flex-direction: row;
         flex-wrap: wrap;
-        gap: 2rem;
+        gap: 1rem;
+        padding-bottom: 2rem;
+        padding-left: 1.2rem;
     }
     
     .product {
         width: 23.5%;
-        height: 17.50rem;
+        height: fit-content;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         align-items: center;
-        gap: 1.5rem;
-        /* color: #FFFFFF; */
+        gap: 1.4rem;
     }
 
     .pro-img {
         width: 100%;
-        height: 16.50rem;
+        height: fit-content;
     }
     
     .pro-img img{
@@ -296,16 +310,14 @@
     }
 
     .pro-desc {
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        width: 90%;
         height: fit-content;
         text-align: center;
         line-height: 0.5rem;
         color: #000;
+        gap: 0.5rem;
     }
 
-    /* word wrap to move "collections" to new line */
-    /* .break1::before {
-        content: "\a";
-        white-space: pre;
-    } */
 }
