--- a/assets/styles/msg-products.css
+++ b/assets/styles/msg-products.css
@@ -176,12 +176,14 @@
 .pro-img {
     width: 100%;
     height: fit-content;
+    cursor: pointer;
 }
 
 .pro-img img{
     width: 100%;
     height: 100%;
 }
+
 
 .pro-desc {
     display: flex;
@@ -192,10 +194,14 @@
     line-height: 0.5rem;
     color: #000;
     gap: 0.5rem;
+    cursor: pointer;
+}
+
+.pro-desc:hover {
+    color: blueviolet;
 }
 
 .pro-container .button {
-    /* margin: 0.80rem 0 1.1rem 0; */
     font-family: 'Dosis', sans-serif;
     font-size: 1rem;
     font-weight: 500;
