--- a/assets/styles/msg-products.css
+++ b/assets/styles/msg-products.css
@@ -177,11 +177,17 @@
     width: 100%;
     height: fit-content;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .pro-img img{
     width: 100%;
     height: 100%;
+    transition: transform .5s ease;
+}
+
+.pro-img:hover img {
+    transform: scale(1.5);
 }
 
 
@@ -210,6 +216,10 @@
     background: none;
     text-decoration: underline;
     cursor: pointer;
+}
+
+.pro-container .button:hover {
+    color: blueviolet;
 }
 
 
